# singbox_to_xray

./: .gitignore  README.md  install.sh  pyproject.toml  singbox_to_xray.py
.github/workflows/: test.yml
docs/: design.md  migration-guide.md
tests/: test_singbox_to_xray.py
